--- a/src/main/resources/templates/student/edit.html
+++ b/src/main/resources/templates/student/edit.html
@@ -1,54 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/masterlayout.html}">
 <head>
 
-
-
-    Failed to convert property value of type java.lang.String to required type java.time.LocalDate for property enrollmentDate; nested exception is org.springframework.core.convert.ConversionFailedException: Failed to convert from type [java.lang.String] to type [@javax.persistence.Column java.time.LocalDate] for value 2019-08-05; nested exception is java.lang.IllegalArgumentException: Parse attempt failed for value [2019-08-05]
-
-
-
-    <title>eRegistrar</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/master.css}">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
+<th:block layout:fragment="content">
 
-<nav class="navbar navbar-inverse navbar-fixed-top navbar-custom">
-    <div>
-
-        <div class="container-fluid" style="float: left">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/eregistrar/home">eRegistrar</a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li><a href="/eregistrar/home">Home</a></li>
-                <li><a href="/eregistrar/student/list">Students</a></li>
-                <li class="active"><a href="/eregistrar/student/new">Add New Student</a></li>
-            </ul>
-
-        </div>
-        <div style="float: right">
-            <form class="navbar-form navbar-left" action="/eregistrar/student/search" method="post">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search" name="search">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit">
-                            <i class="glyphicon glyphicon-search"></i>
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
-</nav>
-
-<div style="padding-top:1em;" class="container">
+<div class="container">
     <div style="margin-top: 70px; margin-bottom: 30px">
         <span style="font-size: 2em; color: black;">Edit Student data with Student Number: [[${student.studentNumber}]]</span>
     </div>
@@ -141,17 +101,6 @@
         </fieldset>
     </form>
 </div>
-
-
-<hr/>
-<footer class="footer">
-    <div class="container">
-        <span class="text-muted">Kedi Wagobera Edgar : : : CS425-SWE</span>
-        <span style="float:right;" class="text-muted">&copy; August 2019</span>
-    </div>
-</footer>
-<hr/>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-
+</th:block>
+</body>
+</html>
